<resources>
    <string name="app_name">SmartTerminal</string>

    <string name="title_bluetooth_search">Поиск Bluetooth</string>

    <string name="button_negative">Отмена</string>
    <string name="button_positive">ОК</string>
    <string name="button_close">Закрыть</string>
    <string name="button_stop_search">Остановить</string>
    <string name="button_start_search">Искать</string>
    <string name="found_bluetooth">Найденные устройства</string>
    <string name="paired_bluetooth">Ранее подключенные устройства</string>
    <string name="string_connected_to">Подключен %s</string>
    <string name="searching">поиск...</string>
    <string name="connecting">подключение... [%d]</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_command">Команды</string>

    <string name="app_folder">App Folder</string>
    <string name="storage">Storage</string>
    <string name="sd_card">SD</string>
    <string name="new_folder">NewFolder</string>
    <string name="zip">Zip</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="dir_read_only_msg">Эта папка только для чтения и не может быть выбрана для записи</string>
    <string name="select_this_folder">Выбрать эту папку</string>
    <string name="pref_command_path">pref_command_path</string>
    <string name="pref_command_load">pref_command_load</string>
</resources>