<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/directoryInfo"
        style="@style/horizontalCenter">

        <Button
            android:id="@+id/btnHome"
            style="@style/ImageTextButton"
            android:drawableTop="@drawable/explorer_home"
            android:text="@string/app_folder" />

        <Button
            android:id="@+id/btnStorage"
            style="@style/ImageTextButton"
            android:drawableTop="@drawable/explorer_phone_android"
            android:text="@string/storage" />

        <Button
            android:id="@+id/btnSDCard"
            style="@style/ImageTextButton"
            android:drawableTop="@drawable/explorer_sd_card"
            android:text="@string/sd_card" />

        <Button
            android:id="@+id/btnCreateFolder"
            style="@style/ImageTextButton"
            android:drawableTop="@drawable/explorer_create_new_folder"
            android:text="@string/new_folder" />

    </LinearLayout>

    <LinearLayout style="@style/horizontal">

        <TextView
            android:id="@+id/txtvSelectedFolder"
            style="@style/H2_text"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:ellipsize="start"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="?attr/coloredText"
            tools:text="/path/to/folder"
            />

    </LinearLayout>

    <!--Синяя полоска-->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?attr/coloredText" />

    <!--        android:background="?attr/dialogBackground2"-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/directoryList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <LinearLayout
        android:id="@+id/read_only_msg"
        style="@style/vertical">

        <!--Синяя полоска-->
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/coloredText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dir_read_only_msg"
            android:textColor="?attr/coloredText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionsPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!--Синяя полоска-->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/coloredText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zip_button"
                style="@style/ImageTextButton"
                android:drawableTop="@drawable/explorer_archive"
                android:text="@string/zip" />

            <Button
                android:id="@+id/share_button"
                style="@style/ImageTextButton"
                android:drawableTop="@drawable/explorer_share"
                android:text="@string/share" />

            <Button
                android:id="@+id/delete_button"
                style="@style/ImageTextButton"
                android:drawableTop="@drawable/explorer_delete"
                android:text="@string/delete" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/horizontalCenter">

        <Button
            style="@style/ImageButtonCustom"
            android:id="@+id/button_select_folder"
            android:text="@string/select_this_folder"
            android:layout_margin="5dp"
            />

    </LinearLayout>


    <LinearLayout style="@style/horizontalCenter" android:id="@+id/footer">

        <Button
            style="@style/ImageButtonCustom"
            android:id="@+id/button_cancel"
            android:text="@string/button_negative"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/button_ok"
            android:text="@string/button_positive"
            android:layout_margin="5dp"
            style="@style/ImageButtonCustom"
            />

    </LinearLayout>

</LinearLayout>
